change video links

--- a/index.qmd
+++ b/index.qmd
@@ -28,19 +28,19 @@ This page displays an outline of the topics, content, and assignments for the te
 
 ::: column-screen-inset-right
 |                    Module                    | Date                | Skills                                               | Packages                                                     | Functions                                                                                                                                                                 |                                   Readings                                   |                                                           Reference                                                           | Videos                                                                                                                                       |                                                       Assignments                                                        |
-|:--------------------------------------------:|---------------------|------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------------------------------------:|:-----------------------------------------------------------------------------------------------------------------------------:|----------------------------------------------------------------------------------------------------------------------------------------------|:------------------------------------------------------------------------------------------------------------------------:|
-| [1.1](/modules/module-1.1.html "Module 1.1") | `r advdate(sat,0)`  | Read data into R                                     | `readr`, `dplyr`                                             | `read_csv()`, `glimpse()`                                                                                                                                                 |                                                                              |                          [📖](https://r4ds.hadley.nz/data-import.html#introduction "r4ds 8.1 & 8.2")                          | [🖥️](https://youtu.be/YLOaKB8dfF4 "Downloading World Bank data")[🖥️](https://youtu.be/XOGXn8IiHK8 "Reading data from a flat file")           |                                                                                                                          |
-|                                              | `r advdate(sun,0)`  | Reshape data                                         | `tidyr`                                                      | `pivot_longer()`                                                                                                                                                          |                                                                              |                                 [📖](https://r4ds.hadley.nz/data-tidy.html "r4ds 6.1 & 6.3")                                  | [🖥️](https://youtu.be/ud36szsO9a4 "Reshaping data")                                                                                          |                                                                                                                          |
-|                                              | `r advdate(mon,0)`  | Clean data                                           | `dplyr`                                                      | `mutate()`, `mutate_at()`, `substring()`                                                                                                                                  | [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris") |                                                                                                                               | [🖥️](https://youtu.be/syG5cdmtXSo "Truncating strings, changing variable types")[🖥️](https://youtu.be/M-uuPBdBCTw "Cleaning variable names") |                   [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Module 1.1. quiz")                    |
-| [1.2](/modules/module-1.2.html "Module 1.2") | `r advdate(tues,0)` | Download data from an API                            | `wbstats`, `vdemdata`, `dplyr`, `janitor`                    | `wb_data()`, `vdem`, `select_()`, `filter()`, `case_match()`, `round_to_fraction()`                                                                                       |                                                                              |                                                                                                                               | [🖥️](https://youtu.be/cBRTP2imt_o "Dowload data from the World Bank")[🖥️](https://youtu.be/7CvYTeMP_PU "Filter data and select variables")   |                                                                                                                          |
-|                                              | `r advdate(wed,0)`  | Merge data frames                                    | `countrycode`, `dplyr` , `readr`                             | `countrycode()`, `left_join()`, `write_csv()`                                                                                                                             |                                                                              |                            [📖](https://r4ds.hadley.nz/joins.html#sec-mutating-joins "r4ds, 20.3")                            | [🖥️](https://youtu.be/ZGD0kO_iwAM "Add country codes to data frame")[🖥️](https://youtu.be/wNF3ZPneHWw "Merge two data frames")               |                                                                                                                          |
-|                                              | `r advdate(thur,0)` | Group, summarize and arrange                         | `dplyr`                                                      | `group_by()`, `summarize()`, `arrange()`                                                                                                                                  |                                                                              |                              [📖](https://r4ds.hadley.nz/data-transform.html#groups "r4ds, 4.5")                              | [🖥️](https://youtu.be/2nX9p6arQjg "Group, summarize and arrange")                                                                            |                    [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Module 1.2 quiz")                    |
-| [2.1](/modules/module-2.1.html "Module 2.1") | `r advdate(sat,1)`  | Bar charts & histograms                              | `ggplot2`                                                    | `ggplot()`, `geom_col()`, `geom_histogram()`, `aes()`, `labs()`                                                                                                           |                                                                              | [📖](https://r4ds.hadley.nz/data-visualize.html "r4ds, 2")[📖](https://r4ds.hadley.nz/communication.html#labels "r4ds, 12.2") | [🖥️](https://youtu.be/hl02sVTyCRA "Bar charts")[🖥️](https://youtu.be/LuNDAIQXx9w "Histograms")                                               |                                                                                                                          |
-|                                              | `r advdate(sun,1)`  | Line charts                                          | `ggplot2`                                                    | `geom_line()`                                                                                                                                                             |                                                                              |                                                                                                                               | [🖥️](https://youtu.be/cHos9y261SQ "Line charts")                                                                                             |                                                                                                                          |
-|                                              | `r advdate(mon,1)`  | Scatter plots                                        | `ggplot2`, `scales`                                          | `geom_point()`, `geom_smooth()`, `scale_x_log10(),` `label_number()`, `geom_text()`                                                                                       |  [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")  |                                  [📖](https://r4ds.hadley.nz/layers.html "r4ds, 10.1-10.4")                                   | [🖥️](https://youtu.be/Cvme3C268wE "Scatter plots")                                                                                           |                    [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Module 2.1 quiz")                    |
-| [2.2](/modules/module-2.2.html "Module 2.2") | `r advdate(tues,1)` | Color schemes                                        | `tidyr`, `colorBlindess`, `dplyr`, `viridis`, `RColorBrewer` | `drop_na()`, `cvdPlot()`, `scale_fill_manual()`, `scale_fill_viridis_d()`, `scale_fill_brewer()`, `scale_color_manual()`, `scale_color_viridis_d()`, `scale_color_brewer` |                                                                              |                              [📖](https://r4ds.hadley.nz/communication.html#scales "r4ds, 12.4")                              | [🖥️](https://youtu.be/fBCtSjg_-Ik "Color schemes")                                                                                           |                                                                                                                          |
-|                                              | `r advdate(wed,1)`  | Themes & annotations                                 | `ggplot2`                                                    | `theme_dark()`, `theme_minimal()`, `annotate()`, `geom_hline()`, `geom_vline()`                                                                                           |                                                                              |                        [📖](https://r4ds.hadley.nz/communication.html#annotations "r4ds, 12.3 & 12.5")                        | [🖥️](https://youtu.be/Le0OJXdsy3o "Themes")[🖥️](https://youtu.be/uEpBMgWilXc "Annotations")                                                  |                                                                                                                          |
-|                                              | `r advdate(thur,1)` | Interactivity                                        | `plotly`                                                     | `ggplotly()`, `layout()`                                                                                                                                                  |                                                                              |                                                                                                                               | [🖥️](https://youtu.be/T-7jtbcwaJ0 "Interactivity")                                                                                           |                    [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Module 2.2 quiz")                    |
+|:------:|--------|--------|--------|--------|:------:|:------:|--------|:------:|
+| [1.1](/modules/module-1.1.html "Module 1.1") | `r advdate(sat,0)`  | Read data into R                                     | `readr`, `dplyr`                                             | `read_csv()`, `glimpse()`                                                                                                                                                 |                                                                              |                          [📖](https://r4ds.hadley.nz/data-import.html#introduction "r4ds 8.1 & 8.2")                          | [🖥️](https://youtu.be/iOugfcOnoks "Downloading World Bank data")[🖥️](https://youtu.be/i5galFqlj8c "Reading data from a flat file")           |                                                                                                                          |
+|                                              | `r advdate(sun,0)`  | Reshape data                                         | `tidyr`                                                      | `pivot_longer()`                                                                                                                                                          |                                                                              |                                 [📖](https://r4ds.hadley.nz/data-tidy.html "r4ds 6.1 & 6.3")                                  | [🖥️](https://youtu.be/yhFUUblhTNA "Reshaping data")                                                                                          |                                                                                                                          |
+|                                              | `r advdate(mon,0)`  | Clean data                                           | `dplyr`                                                      | `mutate()`, `mutate_at()`, `substring()`                                                                                                                                  | [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris") |                                                                                                                               | [🖥️](https://youtu.be/-JT8JSR1z5A "Truncating strings, changing variable types")[🖥️](https://youtu.be/7bgoebbzfKQ "Cleaning variable names") |                   [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Module 1.1. quiz")                    |
+| [1.2](/modules/module-1.2.html "Module 1.2") | `r advdate(tues,0)` | Download data from an API                            | `wbstats`, `vdemdata`, `dplyr`, `janitor`                    | `wb_data()`, `vdem`, `select_()`, `filter()`, `case_match()`, `round_to_fraction()`                                                                                       |                                                                              |                                                                                                                               | [🖥️](https://youtu.be/aY284Dwn9go "Dowload data from the World Bank")[🖥️](https://youtu.be/tFmE3HlTyKQ "Filter data and select variables")   |                                                                                                                          |
+|                                              | `r advdate(wed,0)`  | Merge data frames                                    | `countrycode`, `dplyr` , `readr`                             | `countrycode()`, `left_join()`, `write_csv()`                                                                                                                             |                                                                              |                            [📖](https://r4ds.hadley.nz/joins.html#sec-mutating-joins "r4ds, 20.3")                            | [🖥️](https://youtu.be/fPdnNFZ4Jn0 "Add country codes to data frame")[🖥️](https://youtu.be/-3LiSgUfSwY "Merge two data frames")               |                                                                                                                          |
+|                                              | `r advdate(thur,0)` | Group, summarize and arrange                         | `dplyr`                                                      | `group_by()`, `summarize()`, `arrange()`                                                                                                                                  |                                                                              |                              [📖](https://r4ds.hadley.nz/data-transform.html#groups "r4ds, 4.5")                              | [🖥️](https://youtu.be/OmmSRcLhORg "Group, summarize and arrange")                                                                            |                    [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Module 1.2 quiz")                    |
+| [2.1](/modules/module-2.1.html "Module 2.1") | `r advdate(sat,1)`  | Bar charts & histograms                              | `ggplot2`                                                    | `ggplot()`, `geom_col()`, `geom_histogram()`, `aes()`, `labs()`                                                                                                           |                                                                              | [📖](https://r4ds.hadley.nz/data-visualize.html "r4ds, 2")[📖](https://r4ds.hadley.nz/communication.html#labels "r4ds, 12.2") | [🖥️](https://youtu.be/NiLysFVL0_Y "Bar charts")[🖥️](https://youtu.be/xY5zD89mFf0 "Histograms")                                               |                                                                                                                          |
+|                                              | `r advdate(sun,1)`  | Line charts                                          | `ggplot2`                                                    | `geom_line()`                                                                                                                                                             |                                                                              |                                                                                                                               | [🖥️](https://youtu.be/6WOStwopO7g "Line charts")                                                                                             |                                                                                                                          |
+|                                              | `r advdate(mon,1)`  | Scatter plots                                        | `ggplot2`, `scales`                                          | `geom_point()`, `geom_smooth()`, `scale_x_log10(),` `label_number()`, `geom_text()`                                                                                       |  [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")  |                                  [📖](https://r4ds.hadley.nz/layers.html "r4ds, 10.1-10.4")                                   | [🖥️](https://youtu.be/PPDxYesSN4A "Scatter plots")                                                                                           |                    [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Module 2.1 quiz")                    |
+| [2.2](/modules/module-2.2.html "Module 2.2") | `r advdate(tues,1)` | Color schemes                                        | `tidyr`, `colorBlindess`, `dplyr`, `viridis`, `RColorBrewer` | `drop_na()`, `cvdPlot()`, `scale_fill_manual()`, `scale_fill_viridis_d()`, `scale_fill_brewer()`, `scale_color_manual()`, `scale_color_viridis_d()`, `scale_color_brewer` |                                                                              |                              [📖](https://r4ds.hadley.nz/communication.html#scales "r4ds, 12.4")                              | [🖥️](https://youtu.be/wMkHxYnkk6Q "Color schemes")                                                                                           |                                                                                                                          |
+|                                              | `r advdate(wed,1)`  | Themes & annotations                                 | `ggplot2`                                                    | `theme_dark()`, `theme_minimal()`, `annotate()`, `geom_hline()`, `geom_vline()`                                                                                           |                                                                              |                        [📖](https://r4ds.hadley.nz/communication.html#annotations "r4ds, 12.3 & 12.5")                        | [🖥️](https://youtu.be/aYxg9nxF924 "Themes")[🖥️](https://youtu.be/jkddVyw5wh4 "Annotations")                                                  |                                                                                                                          |
+|                                              | `r advdate(thur,1)` | Interactivity                                        | `plotly`                                                     | `ggplotly()`, `layout()`                                                                                                                                                  |                                                                              |                                                                                                                               | [🖥️](https://youtu.be/lfxYY7T2jTQ "Interactivity")                                                                                           |                    [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Module 2.2 quiz")                    |
 |  [WS-1](/weeks/workshop-day1.html "Day 1")   | `r advdate(fri,1)`  | [*See workshop schedule*](/weeks/workshop-day1.html) |                                                              |                                                                                                                                                                           |                                                                              |                                                                                                                               |                                                                                                                                              |                            [🧮](/assignments/coding-assignment-1.html "Coding assignment 1")                             |
 |  [WS-2](/weeks/workshop-day2.html "Day 2")   | `r advdate(sat,2)`  | [*See workshop schedule*](/weeks/workshop-day2.html) |                                                              |                                                                                                                                                                           |                                                                              |                                                                                                                               |                                                                                                                                              | [🧮](/assignments/coding-assignment-2.html "Coding assignment 2") [✍️](/project/project-assignment.html "Final project") |
 |  [WS-3](/weeks/workshop-day3.html "Day 3")   | `r advdate(sun,2)`  | [*See workshop schedule*](/weeks/workshop-day3.html) |                                                              |                                                                                                                                                                           |                                                                              |                                                                                                                               |                                                                                                                                              |                                                                                                                          |
