--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -40,7 +40,7 @@ The end goal is to have a nice dataset with a combination of World Bank and [V-D
 
 ## Downloading data from an API
 
-{{< video https://youtu.be/cBRTP2imt_o title='Downloading Data from the World Bank' >}}
+{{< video https://youtu.be/aY284Dwn9go title='Downloading Data from the World Bank' >}}
 
 You will no doubt remember the messy data that we downloaded from the World Bank's website in [module 1.1](/modules/module-1.1.htmll#step-1-download-data-from-the-world-bank). Usually it is much easier to download data from an API as opposed to wrangling it from a .csv file. In this example, I want to illustrate that for you by having you download the same data that we worked with in the last module using the [wbstats](https://cran.r-project.org/web/packages/wbstats/vignettes/wbstats.html) package.
 
@@ -97,7 +97,7 @@ One thing that becomes very clear here is that `wb_data()` did not download any 
 
 ## Filter observations, select and create new variables 
 
-{{< video https://youtu.be/7CvYTeMP_PU title='Downloading Data Using wbstats' >}}
+{{< video https://youtu.be/tFmE3HlTyKQ title='Downloading Data Using wbstats' >}}
 
 The next thing we want to talk about is how to filter observations and to select new variables. We also delve more into the topic of how to create new variables. To illustrate these concepts, we are going to be working with the [V-Dem Dataset](https://www.v-dem.net/data/the-v-dem-dataset/). The V-Dem offers an R package for downloading its data called [vdemdata](https://github.com/vdeminstitute/vdemdata). 
 
@@ -149,7 +149,7 @@ glimpse(democracy)
 
 ## Add country codes to a data frame
 
-{{< video https://youtu.be/ZGD0kO_iwAM title='Add Country Codes to a Data Frame' >}}
+{{< video https://youtu.be/fPdnNFZ4Jn0 title='Add Country Codes to a Data Frame' >}}
 
 One common problem scholars face when they want to analyze country-level data is the fact that datasets use different country codes. This can make it challenging to combine datasets, thus limiting the potential scope of our analysis. Lucikly, there is a wonderful package called [countrycode](https://vincentarelbundock.github.io/countrycode/) that can help to solve this problem.
 
@@ -179,7 +179,7 @@ glimpse(democracy)
 
 ## Merge two data frames
 
-{{< video https://youtu.be/wNF3ZPneHWw title='Merge Two Data Frames' >}}
+{{< video https://youtu.be/-3LiSgUfSwY title='Merge Two Data Frames' >}}
 
 Now that we have a common country code, we can join the two data sets. There are many different types of joins. First there is a distinction between [mutating joins](https://dplyr.tidyverse.org/reference/mutate-joins.html), which add observations from one dataset to another, and [filtering joins](https://dplyr.tidyverse.org/reference/filter-joins.html), which filter out observations based on their presence or absence in another dataset. Here we are going to be focused on mutating joins. 
 
@@ -211,7 +211,7 @@ glimpse(dem_women)
 
 ## Group, summarize and arrange 
 
-{{< video https://youtu.be/2nX9p6arQjg title='Group, Summarize and Arrange' >}}
+{{< video https://youtu.be/OmmSRcLhORg title='Group, Summarize and Arrange' >}}
 
 Now that we have completed all of the wrangling, let's do something with it. A common sequence in data science is [group by()](https://dplyr.tidyverse.org/reference/group_by.html), [summarize()](https://dplyr.tidyverse.org/reference/summarise.html) and [arrange()](https://dplyr.tidyverse.org/reference/arrange.html). First, we group the data by certain value or category. Then we summarize it by applying a function like `min()`, `max()`, `mean()`, `median()` or `sd()`. Finally, we order the data according to column values. 
 
